--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">College Todo List</string>
     <string name="textViewAssignment">null</string>
+    <string name="textViewNewAssignment">New Assignment</string>
+    <string name="editTitle">Title</string>
 </resources>
